# boredapi_fetcher

./: .gitignore  CMakeLists.txt  README.md  prepare.sh
lib/: CMakeLists.txt
lib/include/: activities.h  activity.h  fetcher.h
lib/src/: activities.cpp  activity.cpp  fetcher.cpp
src/: main.cpp
